custom retention and change timezone

--- a/conf/opt/graphite/conf/storage-schemas.conf
+++ b/conf/opt/graphite/conf/storage-schemas.conf
@@ -14,4 +14,4 @@ retentions = 10s:6h,1min:90d
 
 [default_1min_for_1day]
 pattern = .*
-retentions = 10s:6h,1min:6d,10min:1800d
+retentions = 1m:7d,5m:30d
